Fix definition of S2A_CORE_USE_BORINGSSL.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ elseif (NOT S2A_CORE_SSL_LIBRARIES)
   message(STATUS "Using BoringSSL")
   #include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl)
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/boringssl)
-  add_definitions(-DS2A_CORE_USE_BORINGSSL)
+  set(S2A_CORE_USE_BORINGSSL)
   set(S2A_CORE_SSL_LIBRARIES crypto)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl/src/include)
 endif()
