Remove -Wno-unused-variable warning.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 SET(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
 
 # Needed for BoringSSL.
-set(CMAKE_CXX_FLAGS "-Wno-unused-variable -Wno-unused-result")
+set(CMAKE_CXX_FLAGS "-Wno-unused-result")
 
 # Set default build type.
 if(NOT CMAKE_BUILD_TYPE)
