Update Windows build script to build all targets and fix CMakeLists.txt accordingly. (#50)
* Fix formatting of README title.

* Fix Windows CMake build script.'
'

* Fix typo in run_cmake_build.bat.

* Add target_include_directories for the SSL libraries.

* Add opensslconf.h include to s2a_aead_crypter.h

* Fix how opensslconf.h was included.

* Add OPENSSL_IS_BORINGSSL definition in CMakeLists.txt.

* Add BoringSSL as subdirectory instead of including directory.

* Install nasm on windows.'

* Only include the CCP source file that we need.

* Add missing parenthesis in CMakeLists.txt.

* Remove extra CCP sources.

* Add messages for debugging purposes.

* Fix definition of S2A_CORE_USE_BORINGSSL.

* Try setting S2A_CORE_USE_BORINGSSL differently.

* Disable -Wno-unused-variable warnings in BoringSSL.

* Disable -Wno-unused-result warnings in BoringSSL.

* Remove -Wno-unused-variable warning.

* Move the -Wno-unused-result to the Linux build cmake script.

* Fix Linux build script.

* Change abseil to add_subdirectory from include_directories.

* Change abseil to use current source dir rather than current binary dir.

* Turn on verbose cmake logging for Windows build script.

* Try commenting out possibly unnecessary target include for absl.

* Try only building s2a_core target rather than ALL_BUILD for Windows.

* Remove commented out portions of CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,15 +70,27 @@ endif()
 include_directories(.)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/abseil-cpp)
-include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/upb)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
+set(_S2A_CORE_ABSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
+
+if (S2A_CORE_UPB_LIBRARY)
+  include_directories(S2A_CORE_UPB_LIBRARY)
+else()
+  add_definitions(-DS2A_CORE_USE_NEW_UPB_APIS)
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/upb)
+endif()
 
 if (S2A_CORE_FIND_OPENSSL STREQUAL "true")
+  message(STATUS "Using OpenSSL")
   find_package(OpenSSL REQUIRED)
   set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto)
+  set(_S2A_CORE_SSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIR})
 elseif (NOT S2A_CORE_SSL_LIBRARIES)
-  include_directories(${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl)
+  message(STATUS "Using BoringSSL")
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/boringssl)
+  set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
   set(S2A_CORE_SSL_LIBRARIES crypto)
+  set(_S2A_CORE_SSL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl/src/include)
 endif()
 
 if(APPLE)
@@ -181,15 +193,29 @@ target_link_libraries(s2a_proxy
 add_library(hkdf
   src/crypto/hkdf.cc
   src/crypto/hkdf.h)
+target_include_directories(hkdf PRIVATE
+  ${_S2A_CORE_ABSL_INCLUDE_DIR}
+  ${_S2A_CORE_SSL_INCLUDE_DIR})
 target_link_libraries(hkdf
   ${S2A_CORE_SSL_LIBRARIES}
   absl_status)
-add_library(s2a_aead_crypter
+
+set(_S2A_CORE_AEAD_CRYPTER_SOURCES)
+list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES
   src/crypto/aes_gcm_crypter.cc
-  src/crypto/chacha_poly_crypter_boringssl.cc
   src/crypto/s2a_aead_crypter.cc
   src/crypto/s2a_aead_constants.h
   src/crypto/s2a_aead_crypter.h)
+if(S2A_CORE_USE_BORINGSSL)
+  list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES src/crypto/chacha_poly_crypter_boringssl.cc)
+else()
+  list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES src/crypto/chacha_poly_crypter_openssl.cc)
+endif()
+add_library(s2a_aead_crypter
+  ${_S2A_CORE_AEAD_CRYPTER_SOURCES})
+target_include_directories(s2a_aead_crypter PRIVATE
+  ${_S2A_CORE_ABSL_INCLUDE_DIR}
+  ${_S2A_CORE_SSL_INCLUDE_DIR})
 target_link_libraries(s2a_aead_crypter
   s2a_aead_crypter_util
   ${S2A_CORE_SSL_LIBRARIES}
@@ -200,6 +226,9 @@ target_link_libraries(s2a_aead_crypter
 add_library(s2a_aead_crypter_util
   src/crypto/s2a_aead_crypter_util.cc
   src/crypto/s2a_aead_crypter_util.h)
+target_include_directories(s2a_aead_crypter_util PRIVATE
+  ${_S2A_CORE_ABSL_INCLUDE_DIR}
+  ${_S2A_CORE_SSL_INCLUDE_DIR})
 target_link_libraries(s2a_aead_crypter_util
   ${S2A_CORE_SSL_LIBRARIES})
 add_library(s2a_util
@@ -296,7 +325,7 @@ target_link_libraries(fake_access_token_manager
   absl_statusor)
 
 # Monolithic target for users that want simpler dependency management.
-add_library(s2a_core_monolith
+add_library(s2a_core
   include/access_token_manager.h
   include/access_token_manager_factory.h
   include/s2a_channel_factory_interface.h
@@ -310,6 +339,9 @@ add_library(s2a_core_monolith
   include/s2a_options.h
   src/handshaker/s2a_proxy.cc
   include/s2a_proxy.h)
+target_include_directories(s2a_core PRIVATE
+  ${_S2A_CORE_ABSL_INCLUDE_DIR}
+  ${_S2A_CORE_SSL_INCLUDE_DIR})
 target_link_libraries(
   s2a_crypter
   s2a_ticket_sender
