--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,13 @@ endif()
 include_directories(.)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
-set(_S2A_CORE_ABSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
+if (S2A_CORE_ABSL_DIR)
+  add_subdirectory(${S2A_CORE_ABSL_DIR})
+  set(_S2A_CORE_ABSL_INCLUDE_DIR ${S2A_CORE_ABSL_DIR})
+else()
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
+  set(_S2A_CORE_ABSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
+endif()
 
 if (S2A_CORE_UPB_LIBRARY)
   include_directories(S2A_CORE_UPB_LIBRARY)
@@ -80,7 +85,13 @@ else()
   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/upb)
 endif()
 
-if (S2A_CORE_FIND_OPENSSL STREQUAL "true")
+if (S2A_CORE_SSL_DIR)
+  message(STATUS "S2A Core is using the SSL directory: ${S2A_CORE_SSL_DIR}")
+  add_subdirectory(${S2A_CORE_SSL_DIR})
+  set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
+  set(S2A_CORE_SSL_LIBRARIES crypto)
+  set(_S2A_CORE_SSL_INCLUDE_DIR ${S2A_CORE_SSL_DIR}/src/include)
+elseif (S2A_CORE_FIND_OPENSSL STREQUAL "true")
   message(STATUS "Using OpenSSL")
   find_package(OpenSSL REQUIRED)
   set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto)
