--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ include_directories(.)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 if (S2A_CORE_ABSL_DIR)
-  add_subdirectory(${S2A_CORE_ABSL_DIR} build/abseil-cpp)
+  include_directories(${S2A_CORE_ABSL_DIR})
   set(_S2A_CORE_ABSL_INCLUDE_DIR ${S2A_CORE_ABSL_DIR})
 else()
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/abseil-cpp)
@@ -87,7 +87,7 @@ endif()
 
 if (S2A_CORE_SSL_DIR)
   message(STATUS "S2A Core is using the SSL directory: ${S2A_CORE_SSL_DIR}")
-  add_subdirectory(${S2A_CORE_SSL_DIR} build/boringssl)
+  include_directories(${S2A_CORE_SSL_DIR})
   set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
   set(S2A_CORE_SSL_LIBRARIES crypto)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${S2A_CORE_SSL_DIR}/src/include)
