Build both chacha-poly libraries at once.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,18 +89,18 @@ if (S2A_CORE_SSL_DIR)
   message(STATUS "S2A Core is using the SSL directory: ${S2A_CORE_SSL_DIR}")
   include_directories(${S2A_CORE_SSL_DIR})
   set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
-  set(S2A_CORE_SSL_LIBRARIES crypto)
+  set(S2A_CORE_SSL_LIBRARIES crypto ssl)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${S2A_CORE_SSL_DIR}/src/include)
 elseif (S2A_CORE_FIND_OPENSSL STREQUAL "true")
   message(STATUS "Using OpenSSL")
   find_package(OpenSSL REQUIRED)
-  set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto)
+  set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto OpenSSL::SSL)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIR})
 elseif (NOT S2A_CORE_SSL_LIBRARIES)
   message(STATUS "Using BoringSSL")
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/boringssl)
   set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
-  set(S2A_CORE_SSL_LIBRARIES crypto)
+  set(S2A_CORE_SSL_LIBRARIES crypto ssl)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl/src/include)
 endif()
 
@@ -216,12 +216,9 @@ list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES
   src/crypto/aes_gcm_crypter.cc
   src/crypto/s2a_aead_crypter.cc
   src/crypto/s2a_aead_constants.h
-  src/crypto/s2a_aead_crypter.h)
-if(S2A_CORE_USE_BORINGSSL)
-  list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES src/crypto/chacha_poly_crypter_boringssl.cc)
-else()
-  list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES src/crypto/chacha_poly_crypter_openssl.cc)
-endif()
+  src/crypto/s2a_aead_crypter.h
+  src/crypto/chacha_poly_crypter_boringssl.cc
+  src/crypto/chacha_poly_crypter_openssl.cc)
 add_library(s2a_aead_crypter
   ${_S2A_CORE_AEAD_CRYPTER_SOURCES})
 target_include_directories(s2a_aead_crypter PRIVATE
