Enable to build ChaChaPoly AEAD crypter against either OpenSSL or BoringSSL. (#54)
* Build both chacha-poly libraries at once.

* fix ccp openssl includes

* Fix s2a_aead_crypter_util_test build

* explicitly use boringssl on ubuntu

* try adding bio.h to s2a_aead_crypter.h

* Try removing dollar sign and braces

* Try installing targets in bin

* try setting S2A_CORE_INSTALL=1

* try using openssl for everything

* Try linking SSL libraries to S2A core target.

* Change GCP Ubuntu and Windows scripts to use BoringSSL rather than OpenSSL.

* run vcpkg upgrade

* switch back to using openssl

* Try updating openssl version in linux build

* Add sudo to openssl install commands.

* Try using libcurl4-openssl-dev instead.

* Try again to install the newer openssl

* trying againt to install newer openssl

* trying again

* remove openssl from sudo apt update

* trying once again

* Add OpenSSL version guard in CCP.

* try setting openssl root dir on windows

* try omitting openssl stuff on windows build

* fix Bazel build

* use nasm compiler for windows

* try removing headers from s2a_aead_crypter target

* try using openssl for windows

* force install openssl on windows

* cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,13 +215,8 @@ set(_S2A_CORE_AEAD_CRYPTER_SOURCES)
 list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES
   src/crypto/aes_gcm_crypter.cc
   src/crypto/s2a_aead_crypter.cc
-  src/crypto/s2a_aead_constants.h
-  src/crypto/s2a_aead_crypter.h)
-if(S2A_CORE_USE_BORINGSSL)
-  list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES src/crypto/chacha_poly_crypter_boringssl.cc)
-else()
-  list(APPEND _S2A_CORE_AEAD_CRYPTER_SOURCES src/crypto/chacha_poly_crypter_openssl.cc)
-endif()
+  src/crypto/chacha_poly_crypter_boringssl.cc
+  src/crypto/chacha_poly_crypter_openssl.cc)
 add_library(s2a_aead_crypter
   ${_S2A_CORE_AEAD_CRYPTER_SOURCES})
 target_include_directories(s2a_aead_crypter PRIVATE
@@ -370,5 +365,6 @@ target_link_libraries(
   absl_str_format
   absl_synchronization
   absl_variant
+  ${S2A_CORE_SSL_LIBRARIES}
   upb
 )
