Make system OpenSSL the default SSL library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,17 +95,11 @@ if (S2A_CORE_SSL_DIR)
   set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
   set(S2A_CORE_SSL_LIBRARIES crypto)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${S2A_CORE_SSL_DIR}/src/include)
-elseif (S2A_CORE_FIND_OPENSSL STREQUAL "true")
-  message(STATUS "Using OpenSSL")
+else()
+  message(STATUS "S2A Core is using system OpenSSL.")
   find_package(OpenSSL REQUIRED)
   set(S2A_CORE_SSL_LIBRARIES OpenSSL::Crypto)
   set(_S2A_CORE_SSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIR})
-elseif (NOT S2A_CORE_SSL_LIBRARIES)
-  message(STATUS "Using BoringSSL")
-  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/boringssl)
-  set(S2A_CORE_USE_BORINGSSL "s2a_core_using_boringssl")
-  set(S2A_CORE_SSL_LIBRARIES crypto)
-  set(_S2A_CORE_SSL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/third_party/boringssl/src/include)
 endif()
 
 if(APPLE)
