try again with libressl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,11 @@ endif()
 if (S2A_CORE_SSL_INCLUDE_DIR)
   message(STATUS "S2A Core is using the SSL directory: ${S2A_CORE_SSL_INCLUDE_DIR}")
   include_directories(${S2A_CORE_SSL_INCLUDE_DIR})
+elseif(S2A_CORE_USE_LIBRESSL)
+  message(STATUS "S2A Core is using sytem LibreSSL.")
+  find_package(LibreSSL REQUIRED)
+  set(S2A_CORE_SSL_LIBRARIES LibreSSL::Crypto)
+  set(S2A_CORE_SSL_INCLUDE_DIR ${LIBRESSL_INCLUDE_DIR})
 else()
   message(STATUS "S2A Core is using system OpenSSL.")
   find_package(OpenSSL REQUIRED)
