--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ if (S2A_CORE_SSL_INCLUDE_DIR)
   message(STATUS "S2A Core is using the SSL directory: ${S2A_CORE_SSL_INCLUDE_DIR}")
   include_directories(${S2A_CORE_SSL_INCLUDE_DIR})
 elseif(S2A_CORE_USE_LIBRESSL)
-  message(STATUS "S2A Core is using sytem LibreSSL.")
+  message(STATUS "S2A Core is using system LibreSSL.")
   find_package(LibreSSL REQUIRED)
   set(S2A_CORE_SSL_LIBRARIES LibreSSL::Crypto)
   set(S2A_CORE_SSL_INCLUDE_DIR ${LIBRESSL_INCLUDE_DIR})
