--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,10 +349,10 @@ set(S2A_CORE_SOURCES
 )
 
 add_library(s2a_core ${S2A_CORE_SOURCES})
-target_include_directories(s2a_core INTERFACE
+target_include_directories(s2a_core PRIVATE
   ${_S2A_CORE_ABSL_INCLUDE_DIR}
   ${S2A_CORE_SSL_INCLUDE_DIR})
-target_link_libraries(
+target_link_libraries(s2a_core INTERFACE
   absl_flat_hash_set
   absl_flat_hash_map
   absl_hash
